fix credits bug on firefox

--- a/src/css/all-stories.less
+++ b/src/css/all-stories.less
@@ -163,6 +163,7 @@ web-story#about {
     .back {
       transition: all 0.2s ease;
       backface-visibility: hidden;
+			-webkit-backface-visibility: hidden; 
     }
 
     .back {
